Fixed navbar formatting on tablet

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -64,7 +64,7 @@ em {
     width: 400px;
   }
   .npad-right {
-    padding-left: 170px;
+    padding-left: 260px;
   }
 }
 
